parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADMIRACION
    ASIGNACION
    CARACTERES
    COMA
    COMENTARIO
    COMILLA_DOBLE
    COMILLA_SIMPLE
    DIFERENTE
    DIGITO
    DIVISION
    ETIQUETA_A
    ETIQUETA_AUDIO
    ETIQUETA_B
    ETIQUETA_BODY
    ETIQUETA_BUTTON
    ETIQUETA_CANVAS
    ETIQUETA_DIV
    ETIQUETA_DOCTYPE
    ETIQUETA_FORM
    ETIQUETA_H
    ETIQUETA_HEAD
    ETIQUETA_HR
    ETIQUETA_HREF
    ETIQUETA_IFRAME
    ETIQUETA_IMG
    ETIQUETA_INPUT
    ETIQUETA_LABEL
    ETIQUETA_LI
    ETIQUETA_LINK
    ETIQUETA_META
    ETIQUETA_OL
    ETIQUETA_OPTION
    ETIQUETA_P
    ETIQUETA_SCRIPT
    ETIQUETA_SELECT
    ETIQUETA_SPAN
    ETIQUETA_STYLE
    ETIQUETA_SVG
    ETIQUETA_TABLE
    ETIQUETA_TD
    ETIQUETA_TEXTAREA
    ETIQUETA_TH
    ETIQUETA_TITLE
    ETIQUETA_TR
    ETIQUETA_UL
    ETIQUETA_VIDEO
    GUION_BAJO
    IGUAL
    INTERROGACION
    MAYOR_IGUAL_QUE
    MAYOR_QUE
    MENOR_IGUAL_QUE
    MENOR_QUE
    MULTIPLICACION
    PARENTESIS_A
    PARENTESIS_B
    PUNTO
    RESTA
    SUMA

Grammar

Rule 0     S' -> documento_html
Rule 1     documento_html -> etiqueta_html contenido_html
Rule 2     etiqueta_html -> ETIQUETA_HTML
Rule 3     contenido_html -> contenido_html etiqueta_html
Rule 4     contenido_html -> empty
Rule 5     empty -> <empty>

Terminals, with rules where they appear

ADMIRACION           : 
ASIGNACION           : 
CARACTERES           : 
COMA                 : 
COMENTARIO           : 
COMILLA_DOBLE        : 
COMILLA_SIMPLE       : 
DIFERENTE            : 
DIGITO               : 
DIVISION             : 
ETIQUETA_A           : 
ETIQUETA_AUDIO       : 
ETIQUETA_B           : 
ETIQUETA_BODY        : 
ETIQUETA_BUTTON      : 
ETIQUETA_CANVAS      : 
ETIQUETA_DIV         : 
ETIQUETA_DOCTYPE     : 
ETIQUETA_FORM        : 
ETIQUETA_H           : 
ETIQUETA_HEAD        : 
ETIQUETA_HR          : 
ETIQUETA_HREF        : 
ETIQUETA_HTML        : 2
ETIQUETA_IFRAME      : 
ETIQUETA_IMG         : 
ETIQUETA_INPUT       : 
ETIQUETA_LABEL       : 
ETIQUETA_LI          : 
ETIQUETA_LINK        : 
ETIQUETA_META        : 
ETIQUETA_OL          : 
ETIQUETA_OPTION      : 
ETIQUETA_P           : 
ETIQUETA_SCRIPT      : 
ETIQUETA_SELECT      : 
ETIQUETA_SPAN        : 
ETIQUETA_STYLE       : 
ETIQUETA_SVG         : 
ETIQUETA_TABLE       : 
ETIQUETA_TD          : 
ETIQUETA_TEXTAREA    : 
ETIQUETA_TH          : 
ETIQUETA_TITLE       : 
ETIQUETA_TR          : 
ETIQUETA_UL          : 
ETIQUETA_VIDEO       : 
GUION_BAJO           : 
IGUAL                : 
INTERROGACION        : 
MAYOR_IGUAL_QUE      : 
MAYOR_QUE            : 
MENOR_IGUAL_QUE      : 
MENOR_QUE            : 
MULTIPLICACION       : 
PARENTESIS_A         : 
PARENTESIS_B         : 
PUNTO                : 
RESTA                : 
SUMA                 : 
error                : 

Nonterminals, with rules where they appear

contenido_html       : 1 3
documento_html       : 0
empty                : 4
etiqueta_html        : 1 3

Parsing method: LALR

state 0

    (0) S' -> . documento_html
    (1) documento_html -> . etiqueta_html contenido_html
    (2) etiqueta_html -> . ETIQUETA_HTML

    ETIQUETA_HTML   shift and go to state 3

    documento_html                 shift and go to state 1
    etiqueta_html                  shift and go to state 2

state 1

    (0) S' -> documento_html .



state 2

    (1) documento_html -> etiqueta_html . contenido_html
    (3) contenido_html -> . contenido_html etiqueta_html
    (4) contenido_html -> . empty
    (5) empty -> .

    ETIQUETA_HTML   reduce using rule 5 (empty -> .)
    $end            reduce using rule 5 (empty -> .)

    contenido_html                 shift and go to state 4
    empty                          shift and go to state 5

state 3

    (2) etiqueta_html -> ETIQUETA_HTML .

    ETIQUETA_HTML   reduce using rule 2 (etiqueta_html -> ETIQUETA_HTML .)
    $end            reduce using rule 2 (etiqueta_html -> ETIQUETA_HTML .)


state 4

    (1) documento_html -> etiqueta_html contenido_html .
    (3) contenido_html -> contenido_html . etiqueta_html
    (2) etiqueta_html -> . ETIQUETA_HTML

    $end            reduce using rule 1 (documento_html -> etiqueta_html contenido_html .)
    ETIQUETA_HTML   shift and go to state 3

    etiqueta_html                  shift and go to state 6

state 5

    (4) contenido_html -> empty .

    ETIQUETA_HTML   reduce using rule 4 (contenido_html -> empty .)
    $end            reduce using rule 4 (contenido_html -> empty .)


state 6

    (3) contenido_html -> contenido_html etiqueta_html .

    ETIQUETA_HTML   reduce using rule 3 (contenido_html -> contenido_html etiqueta_html .)
    $end            reduce using rule 3 (contenido_html -> contenido_html etiqueta_html .)

